@@ -7,6 +7,7 @@ Version 1.3.12+svn:
     * Allow ThemeWML to display the race.
   * User interface
     * Display the race in the unit preview panel.
+    * allow to use team labels also for 1-player-teams (bug #9747)
     * changing the langugage now sets the version number in the title
       properly.	
 
